# Monitor-Controller

./: .gitignore  Monitor-Controller.code-workspace  README.md  copy_uf2.py  firmbuild.py  firmbuild2.py  last_used.txt
firmware/: Monitor-Controller.code-workspace  copy_uf2.py  (+2 more)
firmware/Monitor-Control-Firmware_V2/: CMakeLists.txt  PGA2310data.S  monitorcontrol.c
firmware/Monitor-Control-Firmware_V2/PGA2310/: PGA2310.c  PGA2310.h
firmware/Monitor-Control-Firmware_V2/VUmeter/: VUmeter.c  display.c  vumeter.h
firmware/Monitor-Control-Firmware_V2/build /: CMakeCache.txt  Monitor-Control-Firmware_V2.dis  Monitor-Control-Firmware_V2.elf  Monitor-Control-Firmware_V2.elf.map  Monitor-Control-Firmware_V2.hex  Monitor-Control-Firmware_V2.uf2  cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /elf2uf2/: CMakeCache.txt  cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/boot_uf2/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/pico_divider/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/pico_sync/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/pico_time/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/common/pico_util/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2040/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/boot_stage2/: bs2_default.dis  bs2_default_padded_checksummed.S
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/cyw43_driver/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_pwm/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_resets/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_sync/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pico-sdk/src/rp2_common/hardware_timer/: cmake_install.cmake
firmware/Monitor-Control-Firmware_V2/build /pioasm/: CMakeCache.txt  cmake_install.cmake  pioasm
firmware/PGA2310/: CMakeLists.txt  PGA2310.S  PGA2310.h  PGA2310.pio  VUmeter.h  monitorcontrol.c
firmware/ssd1306_test/: CMakeLists.txt  ssd1306_test.c
(+20 files in other folders)
